@@ -12,6 +12,8 @@ import org.synyx.urlaubsverwaltung.department.DepartmentService;
 import org.synyx.urlaubsverwaltung.period.DayLength;
 import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.person.PersonService;
+import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteService;
+import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteStatus;
 import org.synyx.urlaubsverwaltung.util.DurationFormatter;
 import org.synyx.urlaubsverwaltung.workingtime.WorkDaysCountService;
 
@@ -27,9 +29,9 @@ import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Stream;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED_CANCELLATION_REQUESTED;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.TEMPORARY_ALLOWED;
@@ -37,8 +39,10 @@ import static org.synyx.urlaubsverwaltung.application.application.ApplicationSta
 import static org.synyx.urlaubsverwaltung.person.Role.APPLICATION_CANCELLATION_REQUESTED;
 import static org.synyx.urlaubsverwaltung.person.Role.BOSS;
 import static org.synyx.urlaubsverwaltung.person.Role.DEPARTMENT_HEAD;
+import static org.synyx.urlaubsverwaltung.person.Role.INACTIVE;
 import static org.synyx.urlaubsverwaltung.person.Role.OFFICE;
 import static org.synyx.urlaubsverwaltung.person.Role.SECOND_STAGE_AUTHORITY;
+import static org.synyx.urlaubsverwaltung.person.Role.SICK_NOTE_EDIT;
 
 /**
  * Controller for showing applications for leave in a certain state.
@@ -48,6 +52,7 @@ import static org.synyx.urlaubsverwaltung.person.Role.SECOND_STAGE_AUTHORITY;
 class ApplicationForLeaveViewController implements HasLaunchpad {
 
     private final ApplicationService applicationService;
+    private final SickNoteService sickNoteService;
     private final WorkDaysCountService workDaysCountService;
     private final DepartmentService departmentService;
     private final PersonService personService;
@@ -55,10 +60,11 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
     private final MessageSource messageSource;
 
     @Autowired
-    ApplicationForLeaveViewController(ApplicationService applicationService, WorkDaysCountService workDaysCountService,
+    ApplicationForLeaveViewController(ApplicationService applicationService, SickNoteService sickNoteService, WorkDaysCountService workDaysCountService,
                                       DepartmentService departmentService, PersonService personService, Clock clock,
                                       MessageSource messageSource) {
         this.applicationService = applicationService;
+        this.sickNoteService = sickNoteService;
         this.workDaysCountService = workDaysCountService;
         this.departmentService = departmentService;
         this.personService = personService;
@@ -84,12 +90,23 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
         return "application/application-overview";
     }
 
+    @GetMapping("/sicknote/submitted")
+    public String showApplicationWithSickNoteSubmittedContent(Model model, Locale locale) {
+
+        prepareApplicationModels(model, locale);
+        model.addAttribute("activeContent", "sicknote");
+
+        return "application/application-overview";
+    }
+
     private void prepareApplicationModels(Model model, Locale locale) {
         final Person signedInUser = personService.getSignedInUser();
         model.addAttribute("signedInUser", signedInUser);
 
         model.addAttribute("canAccessApplicationStatistics", signedInUser.hasRole(OFFICE) || signedInUser.hasRole(BOSS) || signedInUser.hasRole(DEPARTMENT_HEAD) || signedInUser.hasRole(SECOND_STAGE_AUTHORITY));
         model.addAttribute("canAccessCancellationRequests", signedInUser.hasRole(OFFICE) || (signedInUser.hasRole(APPLICATION_CANCELLATION_REQUESTED) && (signedInUser.hasRole(BOSS) || signedInUser.hasRole(DEPARTMENT_HEAD) || signedInUser.hasRole(SECOND_STAGE_AUTHORITY))));
+        model.addAttribute("canAccessOtherApplications", signedInUser.hasRole(OFFICE) || signedInUser.hasRole(BOSS) || signedInUser.hasRole(DEPARTMENT_HEAD) || signedInUser.hasRole(SECOND_STAGE_AUTHORITY));
+        model.addAttribute("canAccessSickNoteSubmissions", signedInUser.hasRole(OFFICE) || (signedInUser.hasRole(SICK_NOTE_EDIT) && (signedInUser.hasRole(BOSS) || signedInUser.hasRole(DEPARTMENT_HEAD) || signedInUser.hasRole(SECOND_STAGE_AUTHORITY))));
 
         final List<Person> membersAsDepartmentHead = signedInUser.hasRole(DEPARTMENT_HEAD) ? departmentService.getMembersForDepartmentHead(signedInUser) : List.of();
         final List<Person> membersAsSecondStageAuthority = signedInUser.hasRole(SECOND_STAGE_AUTHORITY) ? departmentService.getMembersForSecondStageAuthority(signedInUser) : List.of();
@@ -101,6 +118,9 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
         final List<ApplicationForLeave> otherApplications = getOtherRelevantApplicationsForLeave(signedInUser, membersAsDepartmentHead, membersAsSecondStageAuthority);
         final List<ApplicationForLeaveDto> otherApplicationsDtos = mapToApplicationForLeaveDtoList(otherApplications, signedInUser, membersAsDepartmentHead, membersAsSecondStageAuthority, locale);
         model.addAttribute("otherApplications", otherApplicationsDtos);
+
+        final List<SickNoteDto> otherSickNotes = sickNoteService.getForStatesAndPerson(List.of(SickNoteStatus.SUBMITTED), getPersonsForRelevantSubmittedSickNotes(signedInUser)).stream().map(SickNoteDto::new).toList();
+        model.addAttribute("otherSickNotes", otherSickNotes);
 
         final List<ApplicationForLeave> applicationsForLeaveCancellationRequests = getAllRelevantApplicationsForLeaveCancellationRequests(signedInUser, membersAsDepartmentHead, membersAsSecondStageAuthority);
         final List<ApplicationForLeaveDto> cancellationDtoList = mapToApplicationForLeaveDtoList(applicationsForLeaveCancellationRequests, signedInUser, membersAsDepartmentHead, membersAsSecondStageAuthority, locale);
@@ -121,7 +141,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
                 final boolean allowedToAccessPersonData = departmentService.isSignedInUserAllowedToAccessPersonData(signedInUser, applicationForLeave.getPerson());
                 return toView(applicationForLeave, signedInUser, membersAsDepartmentHead, membersAsSecondStageAuthority, messageSource, locale, allowedToAccessPersonData);
             })
-            .collect(toList());
+            .toList();
     }
 
     private static ApplicationForLeaveDto toView(ApplicationForLeave application, Person signedInUser, List<Person> membersAsDepartmentHead,
@@ -211,7 +231,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
                 final boolean allowedToAccessPersonData = departmentService.isSignedInUserAllowedToAccessPersonData(signedInUser, application.getPerson());
                 return toApplicationReplacementDto(application, signedInUser, locale, allowedToAccessPersonData);
             })
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getAllRelevantApplicationsForLeaveCancellationRequests(Person signedInUser, List<Person> membersAsDepartmentHead, List<Person> membersAsSecondStageAuthority) {
@@ -238,7 +258,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
             .filter(withoutApplicationsOf(signedInUser))
             .map(application -> new ApplicationForLeave(application, workDaysCountService))
             .sorted(comparing(ApplicationForLeave::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getOtherRelevantApplicationsForLeave(Person signedInUser, List<Person> membersAsDepartmentHead, List<Person> membersAsSecondStageAuthority) {
@@ -247,7 +267,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
             // Boss and Office can see all waiting and temporary allowed applications leave
             return getApplicationsForLeaveForBossOrOffice().stream()
                 .filter(withoutApplicationsOf(signedInUser))
-                .collect(toList());
+                .toList();
         }
 
         final List<ApplicationForLeave> applicationsForLeave = new ArrayList<>();
@@ -264,14 +284,14 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
 
         return applicationsForLeave.stream()
             .filter(distinctByKey(ApplicationForLeave::getId))
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getApplicationsForLeaveForBossOrOffice() {
         return applicationService.getForStates(List.of(WAITING, TEMPORARY_ALLOWED)).stream()
             .map(application -> new ApplicationForLeave(application, workDaysCountService))
             .sorted(comparing(ApplicationForLeave::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getApplicationsForLeaveForUser(Person user) {
@@ -280,7 +300,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
         return applicationService.getForStatesAndPerson(states, List.of(user)).stream()
             .map(application -> new ApplicationForLeave(application, workDaysCountService))
             .sorted(comparing(ApplicationForLeave::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getApplicationsForLeaveForDepartmentHead(Person head, List<Person> members) {
@@ -289,7 +309,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
             .filter(withoutSecondStageAuthorityApplications())
             .map(application -> new ApplicationForLeave(application, workDaysCountService))
             .sorted(comparing(ApplicationForLeave::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private List<ApplicationForLeave> getApplicationsForLeaveForSecondStageAuthority(Person secondStage, List<Person> members) {
@@ -297,7 +317,7 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
             .filter(withoutApplicationsOf(secondStage))
             .map(application -> new ApplicationForLeave(application, workDaysCountService))
             .sorted(comparing(ApplicationForLeave::getStartDate))
-            .collect(toList());
+            .toList();
     }
 
     private Predicate<Application> withoutApplicationsOf(Person person) {
@@ -338,4 +358,26 @@ class ApplicationForLeaveViewController implements HasLaunchpad {
             .dayLength(dayLength)
             .build();
     }
+
+    private List<Person> getPersonsForRelevantSubmittedSickNotes(Person signedInUser) {
+
+        if (signedInUser.hasRole(OFFICE) || (signedInUser.hasRole(BOSS) && signedInUser.hasRole(SICK_NOTE_EDIT))) {
+            return personService.getActivePersons().stream().filter(person -> !person.equals(signedInUser)).toList();
+        }
+
+        final List<Person> membersForDepartmentHead = signedInUser.hasRole(DEPARTMENT_HEAD) && signedInUser.hasRole(SICK_NOTE_EDIT)
+            ? departmentService.getMembersForDepartmentHead(signedInUser)
+            : List.of();
+
+        final List<Person> memberForSecondStageAuthority = signedInUser.hasRole(SECOND_STAGE_AUTHORITY) && signedInUser.hasRole(SICK_NOTE_EDIT)
+            ? departmentService.getMembersForSecondStageAuthority(signedInUser)
+            : List.of();
+
+        return Stream.concat(memberForSecondStageAuthority.stream(), membersForDepartmentHead.stream())
+            .filter(person -> !person.hasRole(INACTIVE))
+            .distinct()
+            .sorted(comparing(Person::getFirstName).thenComparing(Person::getLastName))
+            .toList();
+    }
+
 }
